--- a/config/themes/theme.css
+++ b/config/themes/theme.css
@@ -1,432 +1,266 @@
-/* Thème Zen Noir pour Gtk */
+/* Zen Noir Theme for Gtk */
 
-/* Fond de la fenêtre */
+/* Window background */
 window {
-    background-color: #000000; /* Noir */
+    background-color: #000000; /* Black */
 }
 
-/* Conteneur principal */
+/* Main container */
 box, flowbox {
-    background-color: #000000; /* Noir */
-    /*padding: 20px;*/ /* Espacement autour du contenu */
+    background-color: #000000; /* Black */
+}
+
+/* Title style */
+.title {
+    color: #ffffff; /* White */
+    font-size: 26px;
+    background-color: #222222; /* Dark gray for label background */
+    padding: 20px 20px;
+    border-radius: 0px; /* Slightly rounded corners */
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
 }
 
 /* Label */
 .label {
-    color: #ffffff; /* Blanc */
+    color: #ffffff; /* White */
     font-size: 26px;
-    /*margin: 20px 0;*/ /* Espacement vertical */
-    /*background-color: #333333;*/ /* Gris foncé pour le fond des labels */
     padding: 10px 10px;
-    border-radius: 10px; /* Coins légèrement arrondis */
- 
+    border-radius: 10px; /* Slightly rounded corners */
 }
 
-/* Boutons */
+.description-label {
+    font-size: 30px;
+    color: rgb(218, 214, 214);
+}
+
+.subtitle {
+    font-size: 28px; 
+    font-weight: bold; 
+    color: white; 
+    padding: 5px; 
+    margin: 5px 0; 
+}
+
+.password {
+    font-size: 30px; 
+    margin: 20px; 
+    padding: 15px; 
+    border: 2px solid #555555; 
+    background-color: #000000; 
+    color: #ffffff; 
+    border-radius: 5px; 
+}
+
+/* Buttons */
 .button {
-    background-image: none; /* Supprime l'image de fond */
-    background-color: #444444; /* Gris foncé */
-    color: #ffffff; /* Blanc pour le texte des boutons */
-    border-radius: 0px; /* Coins arrondis */
-    padding: 15px 30px; /* Espacement interne des boutons */
-    border: 1px solid #555555; /* Bordure gris moyen */
+    background-image: none; 
+    background-color: #444444; 
+    color: #ffffff; 
+    padding: 15px 30px; 
+    border: 1px solid #555555; 
     font-size: 24px;
-    margin: 10px; /* Espacement externe entre les boutons */
-    transition: background-color 0.3s ease, transform 0.3s ease; /* Transition douce pour hover et active */
+    font-weight: bold;
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
 }
 
 .button:hover {
-    background-color: #555555; /* Gris plus clair au survol */
+    background-color: #555555; 
 }
 
 .button:active {
-    background-color: #333333; /* Gris plus foncé lorsque le bouton est actif */
+    background-color: #333333; 
 }
 
-/* Champs de texte */
-entry {
-    background-color: #333333; /* Gris foncé */
-    color: #ffffff; /* Texte blanc */
-    border: 1px solid #555555; /* Bordure gris moyen */
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 0; /* Espacement externe vertical */
-}
-
-/* Barres de défilement */
-scrollbar {
-    background-color: #444444; /* Gris foncé */
-}
-
-scrollbar slider {
-    background-color: #666666; /* Gris moyen */
-    border-radius: 10px;
-}
-
-scrollbar slider:hover {
-    background-color: #888888; /* Gris plus clair au survol */
-}
-
-/* Couleurs pour les éléments activés */
-.button.selected {
-    background-color: #666666; /* Gris plus clair pour les éléments sélectionnés */
-}
-
-/* theme.css */
-
-/* Style de base pour le message de bienvenue */
+/* Welcome message style */
 #welcome-label {
-    font-size: 32px;
+    font-size: 34px;
     font-family: 'Arial', sans-serif;
-    color: #af1818;
+    color: white;
     font-weight: bold;
 }
 
-/* Style pour le message de bienvenue sans logo */
 #welcome-label.no-logo {
     font-size: 28px;
-    color: #af1818;
-    font-weight: bold;
-
-}
-
-/* Style pour les titres */
-.title {
-    color: #ffffff; /* Blanc */
-    font-size: 26px;
-    background-color: #222222; /* Gris foncé pour le fond des labels #550d0d;*/
-    padding: 20px 20px;
-    border-radius: 0px; /* Coins légèrement arrondis */
-    font-family: 'Arial', sans-serif;
-    /*color: #2c3e50;*/
+    color: white;
     font-weight: bold;
 }
 
-.switch {
-    background-color: #ff6600; /* Fond orange pour le switch */
-    border-radius: 5px;
-    padding: 5px;
-}
-
-.switch:active {
-    background-color: #cc5200; /* Fond orange plus foncé lorsqu'il est cliqué */
-}
-
-/* Liste des réseaux Wi-Fi */
-listbox, .listbox {
-    background-color: #333333; /* Fond gris foncé pour la liste des SSID */
-    color: #ffffff; /* Texte blanc */
-    border-radius: 5px;
-    padding: 10px;
-}
-
-listboxrow, .listboxrow {
-    background-color: #444444; /* Fond gris moyen pour les éléments de la liste */
-    margin: 5px;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-listboxrow:selected, .listboxrow:selected {
-    background-color: #ff6600; /* Fond orange pour l'élément sélectionné */
-}
-
-.password{
-    font-size: 30px; 
-    margin: 20px;
-}
-
-
-/* config/themes/theme.css */
-.network-button {
-    background-color: black; /* Fond noir */
-    color: grey; /* Texte en gris */
-    border: none; /* Supprimer les bordures */
-    padding: 10px; /* Espacement interne */
-    border-radius: 5px; /* Coins arrondis */
-    font-size: 20px; /* Taille de police */
-    font-weight: bold; /* Texte en gras */
-    
-}
-
-/* Style pour les labels à l'intérieur des boutons réseau */
-.network-button label {
-    color: grey; /* Couleur du texte dans le label */
-}
-
-
-/* Style pour les boutons réseau */
-.network-button {
-    font-size: 16px;
-    padding: 10px 20px;
-    background: #f0f0f0;
-    border-radius: 8px;
-    border: 1px solid #d0d0d0;
-}
-
-.network-button:hover {
-    background: #e0e0e0;
-}
-
-network-item-box{
-    margin: 30px;
-}
-
-/* Style pour le label du SSID */
-.ssid-label {
-    color: grey;
-    font-size: 18px;
-}
-
-/* Style pour les boutons de la boîte de dialogue */
-.dialog-button {
-    font-size: 18px;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-
-.dialog-button.connect {
-    background-color: #4caf50;
-    color: white;
-}
-
-.dialog-button.cancel {
-    background-color: #f44336;
-    color: white;
-}
-
-
-
-/* Style général pour les boîtes de dialogue */
-.dialog {
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-}
-
-.text-under-image{
-    font-size: 30px;
-    /*font-weight: bold;*/
-    color: white;
-    
-}
-
-/* Style par défaut des boutons */
+/* Default button style */
 .language-button {
-    background-image: none; /* Supprime l'image de fond */
-    background-color: #444444; /* Gris foncé */
-    color: #ffffff; /* Blanc pour le texte des boutons */
-    border-radius: 0px; /* Coins arrondis */
-    padding: 15px 30px; /* Espacement interne des boutons */
-    border: 2px solid #555555; /* Bordure gris moyen */
+    background-image: none; 
+    background-color: #000000; 
+    color: #ffffff; 
+    border: 1px solid #555555; 
     font-size: 24px;
-    margin: 10px; /* Espacement externe entre les boutons */
-    transition: background-color 0.3s ease, transform 0.3s ease; /* Transition douce pour hover et active */
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
     font-weight: bold;
 }
 
-/* Style au survol (hover) des boutons */
-/*.language-button:hover {*/
-   /* background-color: #005f99;*/ /* Remplacez par la couleur que vous souhaitez */
-    /*color: white; */ /* Garder le texte blanc */
-/*}*/
+.language-button:hover {
+    color: white; 
+}
 
-/* Style lors de l'appui sur le bouton */
 .language-button:active {
-    background-color: #af1818; /* Deep maroon text */
-    border-color: #f5f0f0; /* Border matches text color */
+    background-color: #005f99; 
+    color: white; 
 }
 
-/* Style pour la barre de défilement */
+/* Selected language button style */
+.language-button.selected {
+    background-color: #6c757d; 
+    border-color: #f5f0f0;     
+    color: #ffffff;            
+}
+
+/* Default button style */
+.button1 {
+    background-image: none; 
+    background-color: #228f3b; 
+    color: #ffffff; 
+    padding: 25px 40px;
+    font-size: 26px;
+    margin: 10px; 
+    font-weight: bold;
+}
+
+.button1:hover {
+    background-color: #005f99; 
+    color: white;  
+}
+
+.language-button1:active {
+    background-color: #005f99; 
+    border-color: #f5f0f0; 
+}
+
+.button1.selected {
+    background-color: #005f99; 
+    border-color: #f5f0f0;     
+    color: #ffffff;            
+}
+
+.button2 {
+    background-image: none; 
+    background-color: #6c757d; 
+    color: #ffffff; 
+    padding: 25px 40px;
+    font-size: 26px;
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+    font-weight: bold;
+}
+
+.button3 {
+    background-image: none; 
+    background-color: #6c757d; 
+    color: #ffffff; 
+    padding: 15px 30px;
+    font-size: 26px;
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+    font-weight: bold;
+}
+
+.button4 {
+    background-image: none; 
+    background-color: #005f99; 
+    color: #ffffff; 
+    padding: 15px 25px;
+    font-size: 26px;
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+    font-weight: bold;
+}
+
+.button5 {
+    background-image: none; 
+    background-color: #6c757d; 
+    color: #ffffff; 
+    padding: 15px 30px; 
+    border: 1px solid #555555; 
+    font-size: 24px;
+    font-weight: bold;
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+}
+
+/* Scrollbar style */
 .scrolled-window {
-    border: 1px solid #ccc; /* Bordure pour délimiter la zone de défilement */
- 
+    border: 4px solid #ccc; 
 }
 
-/* CSS pour les cases à cocher personnalisées */
-.check-button {
-    -GtkCheckButton-indicator-size: 24px;  /* Taille de l'indicateur de la case à cocher */
-    -GtkCheckButton-padding: 10px;         /* Espacement autour de la case à cocher */
-}
-
-/* Assurez-vous que le style est appliqué à vos boutons de case à cocher */
-.check-button * {
-    font-size: 18px;  /* Ajustez la taille du texte si nécessaire */
-}
-
-
-/* theme.css */
-
-/* Classe de base pour les labels de test */
-.test-label {
-    font-size: 24pt;  /* Taille de texte par défaut */
-}
-
-/* État en cours */
-.test-label.info {
-    color: #0000FF;  /* Bleu pour l'état en cours */
-}
-
-/* État de succès */
-.test-label.success {
-    color: #008000;  /* Vert pour le succès */
-}
-
-/* État d'erreur */
-.test-label.error {
-    color: #FF0000;  /* Rouge pour l'erreur */
-}
-
-/* Clavier Tactile */
-/* Exemple de CSS pour le widget Keyboard */
+/* Custom keyboard style */
 .keyboard-custom {
     font-family: "Arial", "Sans", sans-serif;
 }
 
 .keyboard-custom button {
     font-family: "Arial", "Sans", sans-serif;
-    background-image: none; /* Supprime l'image de fond */
-    background-color: #444444; /* Gris foncé */
-    color: #ffffff; /* Blanc pour le texte des boutons */
-    border-radius: 5px; /* Coins arrondis */
-    padding: 10px;  /* Espacement interne des boutons */
-    border: 1px solid #555555; /* Bordure gris moyen */
+    background-image: none; 
+    background-color: #444444; 
+    color: #ffffff; 
+    border-radius: 5px; 
+    padding: 10px;  
+    border: 1px solid #555555; 
     font-size:20px;
-    /*margin: 10px;*/ /* Espacement externe entre les boutons */
-    transition: background-color 0.3s ease, transform 0.3s ease; /* Transition douce pour hover et active */
+    transition: background-color 0.3s ease, transform 0.3s ease; 
 }
 
 .keyboard-custom button:hover {
-    background-color: #0faa55; /* Couleur de fond au survol */
+    background-color: #0faa55; 
 }
 
 .keyboard-custom button:active {
-    background-color: #0faa55; /* Couleur de fond au survol */
+    background-color: #0faa55; 
 }
 
-
-* {
-    font-size: 28px;
+/* Default printer model button style */
+.printermodel-button {
+    background-image: none; 
+    background-color: #000000; 
+    color: #ffffff; 
+    border-radius: 0px; 
+    border: 1px solid #555555; 
+    font-size: 24px;
+    margin: 10px; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+    font-weight: bold;
 }
 
-.big-button {
-    font-size: 28px;
-    padding: 10px;
+.printermodel-button:active {
+    background-color: #0faa55; 
+    border-color: #f5f0f0; 
 }
 
-.big-combo {
-    padding: 10px;
-    font-size: 28px;
-}
-/* Pour les boutons de sélection d'imprimante */
-.printer-button {
-    border: 2px solid gray; /* Contour gris */
-    border-radius: 5px;    /* Arrondir les coins si désiré */
-    background-color: black; /* Fond transparent */
-}
-
-/* Pour le texte du nom du modèle */
 .printer-label {
-    color: white; /* Texte blanc */
-    font-weight: bold; /* Texte en gras pour plus de visibilité */
-}
-/* Pour le fond noir de la vbox */
-.black-background {
-    background-color: black; /* Fond noir */
-    /*padding: 5px; *//* Optionnel : ajoute un peu de remplissage */
+    color: white; 
+    font-weight: bold; 
 }
 
-/* Style par défaut des boutons */
-.language-button1 {
-    background-image: none; /* Supprime l'image de fond */
-    background-color: #000000; /* Gris foncé */
-    color: #ffffff; /* Blanc pour le texte des boutons */
-    border-radius: 0px; /* Coins arrondis */
-    /*padding: 15px 30px;*/ /* Espacement interne des boutons */
-    border: 1px solid #555555; /* Bordure gris moyen */
-    /*font-size: 24px;*/
-    margin: 10px; /* Espacement externe entre les boutons */
-    transition: background-color 0.3s ease, transform 0.3s ease; /* Transition douce pour hover et active */
-    /*font-weight: bold;*/
+/* Wifi switch style */
+.wifi-switch {
+    background-color: #005f99;  
 }
 
-/* Style au survol (hover) des boutons */
-/*.language-button:hover {*/
-   /* background-color: #005f99;*/ /* Remplacez par la couleur que vous souhaitez */
-    /*color: white; */ /* Garder le texte blanc */
-/*}*/
-
-/* Style lors de l'appui sur le bouton */
-.language-button1:active {
-    background-color: #af1818; /* Deep maroon text */
-    border-color: #f5f0f0; /* Border matches text color */
+.wifi-switch:checked {
+    background-color: #005f99;  
 }
 
-/* Printer Selection Styling */
-.printer-label {
-    font-size: 14px;
-  
+.wifi-switch:hover {
+    background-color: #0077cc;  
 }
 
-/* Button Styles */
-button {
-    border: none;
-    padding: 10px;
-    font-size: 14px;
-    background-color: #f0f0f0;
-    color: #333;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
+/* The switch circle (knob) style */
+.wifi-switch > trough > slider {
+    background-color: #ffffff;  
+    border: 2px solid #005f99;  
 }
 
-/* Highlight the selected printer */
-.selected-printer {
-    background-color: #005f99; /* Highlight color */
-    color: white;
-    border: 2px solid #005f99;
+.test-label {
+    font-size: 32px; 
+    font-weight: bold;
+    color: #FFFFFF; 
 }
-
-.selected {
-    background-color: #005f99; /* Highlight selected options */
-    color: white;
-    border: 2px solid #005f99;
-}
-
-/* Grayed out button when not selected */
-button:disabled {
-    background-color: #e0e0e0;
-    color: #888;
-    border: 1px solid #ccc;
-}
-
-/* Hover effect for buttons */
-button:hover {
-    background-color: #0077cc;
-    color: white;
-}
-
-
-/* Default styles for Yes and No buttons */
-.button-yes {
-    background-color: blue; /* Default color for Yes */
-    color: white; /* Text color */
-}
-
-.button-no {
-    background-color: blue; /* Default color for No */
-    color: white; /* Text color */
-}
-
-/* Styles for when Yes is selected */
-.button-yes.selected {
-    background-color: gray; /* Change color to gray when selected */
-}
-
-/* Styles for when No is selected */
-.button-no.selected {
-   /* background-color: white; *//* Change color for No when selected */
-    color: black; /* Change text color for better visibility */
-}
-
-
-
